--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,18 @@
         </dependency>
 
         <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-symbol-solver-core</artifactId>
+            <version>3.23.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>weka</groupId>
             <artifactId>weka</artifactId>
             <version>1.0</version>
